@@ -1371,13 +1371,13 @@
 	  <child>
 	    <widget class="GtkEventBox" id="eventbox_lg_boost">
 	      <property name="visible">True</property>
-	      <property name="tooltip" translatable="yes">Left- and right click to change boost</property>
+	      <property name="tooltip" translatable="yes">Right click and left click to change boost state</property>
 	      <property name="visible_window">True</property>
 	      <property name="above_child">False</property>
 	      <signal name="button_press_event" handler="on_eventbox_lg_boost_button_press_event" last_modification_time="Tue, 27 Sep 2005 17:51:44 GMT"/>
 
 	      <child>
-		<widget class="GtkImage" id="image65">
+		<widget class="GtkImage" id="image_lg_boost">
 		  <property name="visible">True</property>
 		  <property name="pixbuf">boost_off.png</property>
 		  <property name="xalign">0.5</property>
@@ -1398,13 +1398,13 @@
 	  <child>
 	    <widget class="GtkEventBox" id="eventbox_lg_style">
 	      <property name="visible">True</property>
-	      <property name="tooltip" translatable="yes">Left- and right click to change style</property>
+	      <property name="tooltip" translatable="yes">Right click and left click to change your playing style</property>
 	      <property name="visible_window">True</property>
 	      <property name="above_child">False</property>
 	      <signal name="button_press_event" handler="on_eventbox_lg_style_button_press_event" last_modification_time="Tue, 27 Sep 2005 16:43:34 GMT"/>
 
 	      <child>
-		<widget class="GtkImage" id="image64">
+		<widget class="GtkImage" id="image_lg_style">
 		  <property name="visible">True</property>
 		  <property name="pixbuf">style_bal.png</property>
 		  <property name="xalign">0.5</property>
