@@ -1,13 +1,14 @@
 10/10/2005: v1.9.2
 	- fixed some minor bugs
 	- updated translations
-	- added Spanish translation
+	- added Spanish and Chinese translations
 	- switched from 'arj' to Gnu 'zip' in the Windows port
 	- added player streaks (hot/cold)
 	- added definition for the Netherlands (thanks to Zwakstroom)
 	- added definition for the World Cup 2006 Germany
 	- minor definition system improvements
 	- window geometry can be saved
+	- boost and style change 'on the fly' during live games
 	
 
 09/10/2005: v1.9.1
